Some small updates
Changes some textures
Started on Fine Smelter

--- a/classes/production/fleck/assets/fleck/lang/en_us.lang
+++ b/classes/production/fleck/assets/fleck/lang/en_us.lang
@@ -12,7 +12,7 @@ item.fleck.chunkredstone.name=Redstone Chunk
 item.fleck.chunkquartz.name=Quartz Chunk
 item.fleck.chunkcopper.name=Copper Chunk
 item.fleck.chunktin.name=Tin Chunk
-item.fleck.chunkaluminum=Aluminum Chunk
+item.fleck.chunkaluminum.name=Aluminum Chunk
 item.fleck.chunklead.name=Lead Chunk
 item.fleck.chunksilver.name=Silver Chunk
 item.fleck.chunknickel.name=Nickel Chunk
